--- a/app/src/main/res/layout/activity_park_search.xml
+++ b/app/src/main/res/layout/activity_park_search.xml
@@ -48,6 +48,14 @@
                     android:layout_alignParentStart="true"
                     android:layout_alignTop="@+id/addressText"
                     app:srcCompat="@drawable/map" />
+
+                <Spinner
+                    android:id="@+id/spinner"
+                    android:textAlignment="center"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentStart="true"
+                    android:layout_below="@+id/imageView3" />
             </RelativeLayout>
 
         </android.support.v7.widget.CardView>
