--- a/app/src/main/res/layout/activity_park_details.xml
+++ b/app/src/main/res/layout/activity_park_details.xml
@@ -97,14 +97,13 @@
             android:layout_below="@+id/textView8"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="12dp">
-            <ImageView
-                android:id="@+id/imageView7"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:layout_below="@+id/cardView2"
-                app:srcCompat="@drawable/googlemaps"
-                android:scaleType="fitXY"/>
+            <fragment xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:tools="http://schemas.android.com/tools"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/map"
+                tools:context=".MapsActivity"
+                android:name="com.google.android.gms.maps.SupportMapFragment" />
         </android.support.v7.widget.CardView>
 
 
