--- a/app/src/main/res/layout/activity_dog_radar.xml
+++ b/app/src/main/res/layout/activity_dog_radar.xml
@@ -38,7 +38,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
-            android:text="Dog Park Radar"
+            android:text="Dog Radar"
             android:textSize="40dp"
             android:textStyle="bold" />
         <android.support.v7.widget.CardView
@@ -63,7 +63,7 @@
                     android:text="Dog Parks Near: "/>
 
                 <EditText
-                    android:id="@+id/addressText"
+                    android:id="@+id/addressTextRadar"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/titleText"
@@ -71,7 +71,8 @@
                     android:layout_toEndOf="@+id/imageView3"
                     android:ems="15"
                     android:inputType="textPersonName"
-                    android:text="511, Royal Ave, New Westminister, B.C." />
+                    android:text="511, Royal Ave, New Westminister, B.C."
+                    android:editable="false"/>
 
                 <ImageView
                     android:layout_marginTop="10dp"
@@ -79,7 +80,7 @@
                     android:layout_width="30dp"
                     android:layout_height="30dp"
                     android:layout_alignParentStart="true"
-                    android:layout_alignTop="@+id/addressText"
+                    android:layout_alignTop="@+id/addressTextRadar"
                     app:srcCompat="@drawable/map" />
             </RelativeLayout>
         </android.support.v7.widget.CardView>
@@ -94,15 +95,22 @@
 
         </android.support.v7.widget.CardView>
 
-        <ImageView
-            android:id="@+id/imageView5"
-            android:layout_width="400dp"
-            android:layout_height="300dp"
+        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/cardView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_below="@+id/cardView3"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="64dp"
-            android:scaleType="fitXY"
-            app:srcCompat="@drawable/googlemaps" />
+            android:layout_marginTop="35dp">
+
+            <fragment xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:tools="http://schemas.android.com/tools"
+                android:id="@+id/mapradar"
+                android:name="com.google.android.gms.maps.SupportMapFragment"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                tools:context=".MapsActivity" />
+        </android.support.v7.widget.CardView>
 
 
     </RelativeLayout>
