--- a/app/src/main/res/layout/activity_park_search.xml
+++ b/app/src/main/res/layout/activity_park_search.xml
@@ -29,7 +29,7 @@
                     android:textSize="20dp"
                     android:text="Dog Parks Near: "/>
 
-                <EditText
+                <AutoCompleteTextView
                     android:id="@+id/addressText"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
